tests/macros/duplicate/validate.stderr
error: duplicate option `validate`
 --> $DIR/validate.rs:4:9
  |
4 |         validate: todo!(),
  |         ^^^^^^^^
