tests/macros/duplicate/validate.rs
fn main() {
    let q = inquisition::questions![input {
        validate: todo!(),
        validate: todo!(),
    }];
}
